--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -22,7 +22,7 @@
                     'Social Events',
                     'Marketing'
                 ),
-                "EventTypes", // New column for concatenated event types
+                EventTypes, // New column for concatenated event types
                 Concat(
                     Filter(
                         [
