--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -318,26 +318,86 @@
                 PaddingTop: =10
                 ZIndex: =34
 
-                TextCanvas6 As Text:
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =32
-                    LayoutMinHeight: =32
-                    LayoutMinWidth: =96
-                    Width: =96
-                    X: =0
-                    Y: =0
-                    ZIndex: =1
-
                 DataTable5 As dataTable.datatable:
                     BorderStyle: =BorderStyle.Solid
                     DisplayMode: =DisplayMode.Edit
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =500
-                    Items: =master_data
+                    Items: =Master_Data
                     LayoutMinHeight: =250
                     LayoutMinWidth: =400
                     Width: =800
                     X: =0
                     Y: =0
                     ZIndex: =2
+
+                    ID_Column1 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="ID"
+                        FieldName: ="ID"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =1
+                        Text: =ThisItem.ID
+                        Width: =100
+                        X: =0
+                        Y: =0
+                        ZIndex: =7
+
+                    Title_Column1 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="Title"
+                        FieldName: ="Title"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =2
+                        Text: =ThisItem.Title
+                        Width: =100
+                        X: =0
+                        Y: =0
+                        ZIndex: =8
+
+                    ActivityTitle_Column1 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="ActivityTitle"
+                        FieldName: ="ActivityTitle"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =3
+                        Text: =ThisItem.ActivityTitle
+                        Width: =100
+                        X: =0
+                        Y: =0
+                        ZIndex: =9
+
+                    NameofLeadOrg_Column1 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="NameofLeadOrg"
+                        FieldName: ="NameofLeadOrg"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =4
+                        Text: =ThisItem.NameofLeadOrg
+                        Width: =100
+                        X: =0
+                        Y: =0
+                        ZIndex: =10
+
+                    EventTypes_Column1 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="EventTypes"
+                        FieldName: ="EventTypes"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =5
+                        Text: =ThisItem.EventTypes
+                        Width: =100
+                        X: =0
+                        Y: =0
+                        ZIndex: =11
 
