--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -48,7 +48,6 @@
     ScreenContainer4_1 As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(245, 245, 245, 1)
         Height: =Parent.Height
-        LayoutDirection: =LayoutDirection.Vertical
         LayoutGap: =16
         LayoutMode: =LayoutMode.Auto
         PaddingBottom: =16
@@ -56,31 +55,12 @@
         PaddingRight: =16
         PaddingTop: =16
         Width: =Parent.Width
+        Y: =60
         ZIndex: =1
-
-        HeaderContainer3_1 As groupContainer.horizontalAutoLayoutContainer:
-            Fill: =RGBA(255, 255, 255, 1)
-            FillPortions: =0
-            Height: =75
-            LayoutMinHeight: =100
-            LayoutMinWidth: =250
-            LayoutMode: =LayoutMode.Auto
-            RadiusBottomLeft: =8
-            RadiusBottomRight: =8
-            RadiusTopLeft: =8
-            RadiusTopRight: =8
-            ZIndex: =2
-
-            TSKBR_14 As TSKBR:
-                LayoutMinHeight: =640
-                LayoutMinWidth: =640
-                NavigationItems: =gblNavItems
-                ZIndex: =4
 
         MainContainer3_1 As groupContainer.horizontalAutoLayoutContainer:
             Fill: =RGBA(245, 245, 245, 1)
             LayoutAlignItems: =LayoutAlignItems.Stretch
-            LayoutDirection: =LayoutDirection.Vertical
             LayoutGap: =16
             LayoutMinHeight: =100
             LayoutMinWidth: =250
@@ -91,12 +71,112 @@
             PaddingLeft: =2
             PaddingRight: =2
             PaddingTop: =2
-            ZIndex: =3
+            ZIndex: =2
+
+            Container20 As groupContainer.verticalAutoLayoutContainer:
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =2
+
+                Container21 As groupContainer.horizontalAutoLayoutContainer:
+                    FillPortions: =0.5
+                    Height: =400
+                    LayoutMinHeight: =300
+                    LayoutMinWidth: |
+                        =400
+                    LayoutMode: =LayoutMode.Auto
+                    LayoutOverflowX: =LayoutOverflow.Scroll
+                    ZIndex: =1
+
+                DataTable8 As dataTable.datatable:
+                    BorderStyle: =BorderStyle.Solid
+                    DisplayMode: =DisplayMode.Edit
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =500
+                    Items: =Master_Data
+                    LayoutMinHeight: =250
+                    LayoutMinWidth: =400
+                    Width: =800
+                    X: =0
+                    Y: =0
+                    ZIndex: =3
+
+                    ID_Column3 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="ID"
+                        FieldName: ="ID"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =1
+                        Text: =ThisItem.ID
+                        Width: =100
+                        X: =0
+                        Y: =0
+                        ZIndex: =7
+
+                    Title_Column3 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="Title"
+                        FieldName: ="Title"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =2
+                        Text: =ThisItem.Title
+                        Width: =100
+                        X: =0
+                        Y: =0
+                        ZIndex: =8
+
+                    ActivityTitle_Column2 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="ActivityTitle"
+                        FieldName: ="ActivityTitle"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =3
+                        Text: =ThisItem.ActivityTitle
+                        Width: =100
+                        X: =458
+                        Y: =0
+                        ZIndex: =9
+
+                    NameofLeadOrg_Column3 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="NameofLeadOrg"
+                        FieldName: ="NameofLeadOrg"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =4
+                        Text: =ThisItem.NameofLeadOrg
+                        Width: =100
+                        X: =0
+                        Y: =0
+                        ZIndex: =10
+
+                    EventTypes_Column3 As dataTableColumn.textualColumn:
+                        DisplayMode: =DisplayMode.Edit
+                        FieldDisplayName: ="EventTypes"
+                        FieldName: ="EventTypes"
+                        FieldVariantName: ="textualColumn"
+                        Height: =Parent.Height
+                        LayoutHeight: =Parent.Height
+                        Order: =5
+                        Text: =ThisItem.EventTypes
+                        Width: =100
+                        X: =0
+                        Y: =0
+                        ZIndex: =11
 
             Container22_1 As groupContainer.verticalAutoLayoutContainer:
                 Fill: =RGBA(255, 255, 255, 1)
+                FillPortions: =0.5
                 LayoutAlignItems: =LayoutAlignItems.Center
-                LayoutDirection: =LayoutDirection.Vertical
                 LayoutGap: =5
                 LayoutJustifyContent: =LayoutJustifyContent.Center
                 LayoutMinHeight: =300
@@ -107,77 +187,6 @@
                 PaddingRight: =5
                 PaddingTop: =10
                 ZIndex: =4
-
-                "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver5.0'":
-                    DelayItemLoading: =true
-                    Items: ='APF Uploads'
-                    Layout: =Layout.Vertical
-                    LoadingSpinner: =LoadingSpinner.Data
-                    TemplatePadding: =0
-                    TemplateSize: =90
-                    Width: =Container22_1.Width
-                    ZIndex: =1
-
-                    Title4 As label:
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =ThisItem.Title
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth - 86
-                        X: =16
-                        Y: =(Parent.TemplateHeight - (Self.Size * 1.8 + Subtitle3.Size * 1.8)) / 2
-                        ZIndex: =1
-
-                    Subtitle3 As label:
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =ThisItem.Title
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Title4.Width
-                        X: =Title4.X
-                        Y: =Title4.Y + Title4.Height
-                        ZIndex: =2
-
-                    NextArrow3 As icon.ChevronRight:
-                        AccessibleLabel: =Self.Tooltip
-                        Color: =RGBA(166, 166, 166, 1)
-                        Height: =50
-                        Icon: =Icon.ChevronRight
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =16
-                        PaddingLeft: =16
-                        PaddingRight: =16
-                        PaddingTop: =16
-                        Tooltip: ="View item details"
-                        Width: =50
-                        X: =Parent.TemplateWidth - Self.Width - 12
-                        Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-                        ZIndex: =3
-
-                    Separator3 As rectangle:
-                        Fill: =RGBA(255, 255, 255, 1)
-                        Height: =8
-                        OnSelect: =Select(Parent)
-                        Width: =Parent.TemplateWidth
-                        Y: =Parent.TemplateHeight - Self.Height
-                        ZIndex: =4
-
-                    Rectangle11 As rectangle:
-                        Height: =Parent.TemplateHeight - Separator3.Height
-                        OnSelect: =Select(Parent)
-                        Visible: =ThisItem.IsSelected
-                        Width: =4
-                        ZIndex: =5
 
                 Container6_1 As groupContainer.manualLayoutContainer:
                     DropShadow: =DropShadow.Light
@@ -233,6 +242,88 @@
                         X: =84
                         Y: =30
                         ZIndex: =6
+
+                    "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver5.0'":
+                        DelayItemLoading: =true
+                        Height: =336
+                        Items: ='APF Uploads'
+                        Layout: =Layout.Vertical
+                        LoadingSpinner: =LoadingSpinner.Data
+                        TemplatePadding: =0
+                        TemplateSize: =90
+                        Width: =424
+                        X: =4
+                        Y: =150
+                        ZIndex: =6
+
+                        Title4 As label:
+                            BorderColor: =RGBA(0, 0, 0, 1)
+                            Color: =RGBA(71, 69, 64, 1)
+                            DisabledColor: =RGBA(186, 186, 186, 1)
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =Self.Size * 1.8
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =14
+                            Text: =ThisItem.Title
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =Parent.TemplateWidth - 86
+                            X: =16
+                            Y: =(Parent.TemplateHeight - (Self.Size * 1.8 + Subtitle3.Size * 1.8)) / 2
+                            ZIndex: =1
+
+                        Subtitle3 As label:
+                            BorderColor: =RGBA(0, 0, 0, 1)
+                            Color: =RGBA(71, 69, 64, 1)
+                            DisabledColor: =RGBA(186, 186, 186, 1)
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =Self.Size * 1.8
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Text: =ThisItem.Title
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =Title4.Width
+                            X: =Title4.X
+                            Y: =Title4.Y + Title4.Height
+                            ZIndex: =2
+
+                        NextArrow3 As icon.ChevronRight:
+                            AccessibleLabel: =Self.Tooltip
+                            Color: =RGBA(166, 166, 166, 1)
+                            Height: =50
+                            Icon: =Icon.ChevronRight
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =16
+                            PaddingLeft: =16
+                            PaddingRight: =16
+                            PaddingTop: =16
+                            Tooltip: ="View item details"
+                            Width: =50
+                            X: =Parent.TemplateWidth - Self.Width - 12
+                            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+                            ZIndex: =3
+
+                        Separator3 As rectangle:
+                            BorderColor: =RGBA(0, 0, 255, 1)
+                            Fill: =RGBA(255, 255, 255, 1)
+                            Height: =8
+                            OnSelect: =Select(Parent)
+                            Width: =Parent.TemplateWidth
+                            Y: =Parent.TemplateHeight - Self.Height
+                            ZIndex: =4
+
+                        Rectangle11 As rectangle:
+                            Height: =Parent.TemplateHeight - Separator3.Height
+                            OnSelect: =Select(Parent)
+                            Visible: =ThisItem.IsSelected
+                            Width: =4
+                            ZIndex: =5
 
                     ButtonCanvas2_1 As Button:
                         DisplayMode: =DisplayMode.Edit
@@ -302,102 +393,7 @@
                         Y: =30
                         ZIndex: =10
 
-            Container42_3 As groupContainer.verticalAutoLayoutContainer:
-                Fill: =RGBA(255, 255, 255, 1)
-                Height: =400
-                LayoutAlignItems: =LayoutAlignItems.Center
-                LayoutDirection: =LayoutDirection.Vertical
-                LayoutGap: =5
-                LayoutJustifyContent: =LayoutJustifyContent.Center
-                LayoutMinHeight: =400
-                LayoutMinWidth: =If(Reports_1.Size = ScreenSize.Small, Parent.Width, 600)
-                LayoutMode: =LayoutMode.Auto
-                PaddingBottom: =10
-                PaddingLeft: =5
-                PaddingRight: =5
-                PaddingTop: =10
-                ZIndex: =34
-
-                DataTable5 As dataTable.datatable:
-                    BorderStyle: =BorderStyle.Solid
-                    DisplayMode: =DisplayMode.Edit
-                    Fill: =RGBA(0, 0, 0, 0)
-                    Height: =500
-                    Items: =Master_Data
-                    LayoutMinHeight: =250
-                    LayoutMinWidth: =400
-                    Width: =800
-                    X: =0
-                    Y: =0
-                    ZIndex: =2
-
-                    ID_Column1 As dataTableColumn.textualColumn:
-                        DisplayMode: =DisplayMode.Edit
-                        FieldDisplayName: ="ID"
-                        FieldName: ="ID"
-                        FieldVariantName: ="textualColumn"
-                        Height: =Parent.Height
-                        LayoutHeight: =Parent.Height
-                        Order: =1
-                        Text: =ThisItem.ID
-                        Width: =100
-                        X: =0
-                        Y: =0
-                        ZIndex: =7
-
-                    Title_Column1 As dataTableColumn.textualColumn:
-                        DisplayMode: =DisplayMode.Edit
-                        FieldDisplayName: ="Title"
-                        FieldName: ="Title"
-                        FieldVariantName: ="textualColumn"
-                        Height: =Parent.Height
-                        LayoutHeight: =Parent.Height
-                        Order: =2
-                        Text: =ThisItem.Title
-                        Width: =100
-                        X: =0
-                        Y: =0
-                        ZIndex: =8
-
-                    ActivityTitle_Column1 As dataTableColumn.textualColumn:
-                        DisplayMode: =DisplayMode.Edit
-                        FieldDisplayName: ="ActivityTitle"
-                        FieldName: ="ActivityTitle"
-                        FieldVariantName: ="textualColumn"
-                        Height: =Parent.Height
-                        LayoutHeight: =Parent.Height
-                        Order: =3
-                        Text: =ThisItem.ActivityTitle
-                        Width: =100
-                        X: =0
-                        Y: =0
-                        ZIndex: =9
-
-                    NameofLeadOrg_Column1 As dataTableColumn.textualColumn:
-                        DisplayMode: =DisplayMode.Edit
-                        FieldDisplayName: ="NameofLeadOrg"
-                        FieldName: ="NameofLeadOrg"
-                        FieldVariantName: ="textualColumn"
-                        Height: =Parent.Height
-                        LayoutHeight: =Parent.Height
-                        Order: =4
-                        Text: =ThisItem.NameofLeadOrg
-                        Width: =100
-                        X: =0
-                        Y: =0
-                        ZIndex: =10
-
-                    EventTypes_Column1 As dataTableColumn.textualColumn:
-                        DisplayMode: =DisplayMode.Edit
-                        FieldDisplayName: ="EventTypes"
-                        FieldName: ="EventTypes"
-                        FieldVariantName: ="textualColumn"
-                        Height: =Parent.Height
-                        LayoutHeight: =Parent.Height
-                        Order: =5
-                        Text: =ThisItem.EventTypes
-                        Width: =100
-                        X: =0
-                        Y: =0
-                        ZIndex: =11
+    TSKBR_14 As TSKBR:
+        NavigationItems: =gblNavItems
+        ZIndex: =2
 
