--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -41,7 +41,7 @@
                     Type,
                     "; "
                 ),
-                "CashAdvance",
+                CashAdvance,
                 LookUp(LR_Uploads, APF_ID.Id = ThisRecord.ID, CashAdvAmt)
             )
         )
