--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -1,8 +1,10 @@
 "Reports_1 As screen.'welcomeLayout_ver1.0'":
     OnVisible: |-
         =// Step 1: Create Master_Data collection from 'APF Uploads'
+        ClearCollect(localLRUploads, LR_Uploads);
+        
         ClearCollect(
-            Master_Data,
+            APF_Data,
             AddColumns(
                 ShowColumns('APF Uploads',
                     ID,  // This is the APF_ID
@@ -41,36 +43,26 @@
                     ),
                     Type,
                     "; "
-                ),
-                CashAdvance, 
-                If(
-                    Not(IsBlank(
-                        LookUp(LR_Uploads, APF_ID.Id = ThisRecord.ID, CashAdvAmt)
-                    )),
-                    LookUp(LR_Uploads, APF_ID.Id = ThisRecord.ID, CashAdvAmt),
-                    0 // Default value if no match is found
-                ),
-        
-                TotalExpenses, 
-                If(
-                    Not(IsBlank(
-                        LookUp(LR_Uploads, APF_ID.Id = ThisRecord.ID, TotalExpenses)
-                    )),
-                    LookUp(LR_Uploads, APF_ID.Id = ThisRecord.ID, TotalExpenses),
-                    0 // Default value if no match is found
-                ),
-        
-                Balance, 
-                If(
-                    Not(IsBlank(
-                        LookUp(LR_Uploads, APF_ID.Id = ThisRecord.ID, Balance)
-                    )),
-                    LookUp(LR_Uploads, APF_ID.Id = ThisRecord.ID, Balance),
-                    0 // Default value if no match is found
                 )
             )
         );
         
+        //ClearCollect(LR_Data, AddColumns(localLRUploads, CashAdvance, LookUp(APF_Data, Text(ID) = APF_ID.Value, CashAdvAmt)));
+        
+        
+        // Step 3: Merge collections with a fallback for CashAdvance
+        ClearCollect(
+            LR_Data,
+            AddColumns(
+                localLRUploads,
+                "CashAdvance",
+                If(
+                    IsBlank(LookUp(APF_Data, Text(ID) = APF_ID.Value, CashAdvAmt)),
+                    0,  // If no match is found, set CashAdvance to 0
+                    LookUp(APF_Data, Text(ID) = APF_ID.Value, CashAdvAmt) // Otherwise, get the CashAdvAmt
+                )
+            )
+        );
         /**
         // First, collect LR_Uploads into a local collection
         ClearCollect(LocalLR, LR_Uploads);
@@ -124,78 +116,6 @@
                 )
             )
         )
-        **/
-        /**
-        
-        // Step 1: Create a temporary collection for LR_Uploads with relevant fields
-        ClearCollect(
-            LR_Uploads_Collection,
-            ShowColumns(
-                LR_Uploads,
-                'APF_ID',         // Include APF_ID
-                'CashAdvAmt'      // Include any other necessary fields
-                // Add more fields as needed
-            )
-        );
-        
-        // Step 2: Create Master_Data collection from 'APF Uploads'
-        ClearCollect(
-            Master_Data,
-            AddColumns(
-                ShowColumns('APF Uploads',
-                    ID,
-                    'Name of Lead Org',
-                    Title,
-                    'Activity Title',
-                    'Target Date',
-                    'Venue/Platform',
-                    'Workshop/Tech Training',
-                    'Seminar/Webinar/Symposium/Forum',
-                    'Leadership Training',
-                    'Academic Competition',
-                    'Culture & Arts',
-                    'Games & Sports', 
-                    'Religious/Spiritual',
-                    'Community Ext', 
-                    'Social Events',
-                    Marketing
-                ),
-                EventTypes, Concat(
-                    Filter(
-                        [
-                            {Type: "Workshop", Value: ThisRecord.Workshop_x002f_TechTraining},
-                            {Type: "Seminar", Value: ThisRecord.Workshop_x002f_TechTraining},
-                            {Type: "Leadership", Value: ThisRecord.LeadershipTraining},
-                            {Type: "Academic", Value: ThisRecord.AcademicCompetition},
-                            {Type: "Cultural", Value: ThisRecord.CultureArts},
-                            {Type: "Sports", Value: ThisRecord.GamesSports},
-                            {Type: "Religious", Value: ThisRecord.Religious_x002f_Spiritual},
-                            {Type: "Community", Value: ThisRecord.CommunityExt},
-                            {Type: "Social", Value: ThisRecord.SocialEvents},
-                            {Type: "Marketing", Value: ThisRecord.Marketing}
-                        ],
-                        Value = true
-                    ),
-                    Type,
-                    "; "
-                )
-            )
-        );
-        
-        // Step 3: Perform the left join to create Joined_Data
-        ClearCollect(
-            Joined_Data,
-            AddColumns(
-                Master_Data,
-                CashAdvance, If(
-                    CountRows(Filter(LR_Uploads_Collection, APF_ID.Id = ThisRecord.APF_ID.Id)) > 0,
-                    First(Filter(LR_Uploads_Collection, APF_ID.Id = ThisRecord.APF_ID.Id)).CashAdvAmt,
-                    0 // Default value if no match is found
-                )
-            )
-        );
-        
-        // Optional: Debugging - Display Joined_Data in a gallery to see the results
         **/
 
     ScreenContainer4_1 As groupContainer.verticalAutoLayoutContainer:
